<resources>
    <string name="app_name">TO DO LIST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">To Do List</string>
    <string name="nav_header_subtitle">omar.ayoub</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Favoris</string>
    <string name="menu_slideshow">Notifications</string>
</resources>